--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,13 @@
         </head>
 
         <body>
+            <div id= "container"> 
+                <div id="post"  >
+                <h1>este es el titulo atractivo e interesante del post </h1>
+                <p> y este es el parrafo de inicio donde vamos a explicar
+                    las cosas increibles
+                </p>
+            </div>
            <h1> aqui vamos a hacer un post</h1> 
            <p>este es el parrafo de inicio</p>
         </body>
