cambio de letra

--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,9 @@
                 <p> y este es el parrafo de inicio donde vamos a explicar
                     las cosas increibles
                 </p>
+                <p> los blogs son la mejor forma de compartir
+                    las ideas e informacion 
+                </p>
             </div>
            <h1> aqui vamos a hacer un post</h1> 
            <p>este es el parrafo de inicio</p>
