--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,9 @@
         <body>
             <div id= "container"> 
                 <div id="cabecera"> 
-                    cabecera
+                    Hiperblog
+                    <span id="tagline"> tu blog de confianza 
+                         </span>
                 </div>
                 <div id="post"  >
                 <h1>este es el titulo atractivo e interesante del post </h1>
