--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
             <div id= "container"> 
                 <div id="cabecera"> 
                     Hiperblog
-                    <span id="tagline"> tu blog de confianza 
+                    <span id="tagline"> tu blog de cabecera 
                          </span>
                 </div>
                 <div id="post"  >
