agregue suscripcion y cambie el color a azul

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
             <div id= "container"> 
                 <div id="cabecera"> 
                     Hiperblog
-                    <span id="tagline"> tu blog de confianza 
+                    <span id="tagline"> tu blog MAESTRO
                          </span>
                 </div>
                 <div id="post"  >
@@ -23,6 +23,7 @@
             </div>
            <h1> aqui vamos a hacer un post</h1> 
            <p>este es el parrafo de inicio</p>
+           <P>SUSCRIBETE Y DALE LIKE</P>
         </body>
 
 
