corregi la cabecera

--- a/blog.html
+++ b/blog.html
@@ -9,12 +9,7 @@
             <div id= "container"> 
                 <div id="cabecera"> 
                     Hiperblog
-<<<<<<< HEAD
-                    <span id="tagline"> tu blog MAESTRO
-=======
-                    <span id="tagline"> tu blog de cabecera 
->>>>>>> cabecera
-                         </span>
+                    <span id="tagline"> tu blog de cabecera  </span>
                 </div>
                 <div id="post"  >
                 <h1>este es el titulo atractivo e interesante del post </h1>
