--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
     <html>
         <head>
-                <title> BIENVENIDO!!  a hyperblog </title>
+                <title> BIENVENIDO!!  a hyperblog 2.0</title>
                 <link rel="stylesheet" href="css/estilos.css">
 
         </head>
