--- a/blog.html
+++ b/blog.html
@@ -14,15 +14,15 @@
                 </div>
                 <div id="post"  >
                 <h1>este es el titulo atractivo e interesante del post </h1>
-                <p> y este es el párrafo de inicio donde vamos a explicar
+                <p> y este es el p&aacute;rrafo de inicio donde vamos a explicar
                     las cosas increibles
                 </p>
                 <p> los blogs son la mejor forma de compartir
-                    las ideas e información 
+                    las ideas e informaci&oacute;n 
                 </p>
             </div>
            <h1> aqui vamos a hacer un post</h1> 
-           <p>este es el párrafo de inicio</p>
+           <p>este es el p&aacute;rrafo de inicio</p>
            <P>SUSCRIBETE Y DALE LIKE</P>
         </body>
 
