agregue imagen al blog

--- a/blog.html
+++ b/blog.html
@@ -15,8 +15,8 @@
                 <div id="post"  >
                 <h1>este es el titulo atractivo e interesante del post </h1>
                 <p> y este es el p&aacute;rrafo de inicio donde vamos a explicar
-                    las cosas increibles
-                </p>
+                    las cosas increibles</p>
+                    <p> <img src="imagenes/descarga.jpg" width="100%" ></p>
                 <p> los blogs son la mejor forma de compartir
                     las ideas e informaci&oacute;n 
                 </p>
