--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
             </div>
            <h1> aqui vamos a hacer un post</h1> 
            <p>este es el p&aacute;rrafo de inicio</p>
-           <P>SUSCRIBETE Y DALE LIKE</P>
+           <P>SUSCRIBETE Y DALE LIKE</P> heheehe 
         </body>
 
 
